# hwpart1store

./: README.md  main.py  pyproject.toml
test/: items.csv  test_main.py
test/test_for_not_found/: test_main.py
