[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["vishSP <hihi64741@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
